--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -39,10 +39,14 @@
   color: white;
 }
 .content {
-  padding-top: 20rem;
+  margin-top: 15rem;
+  background-color: rgb(0, 0, 0, 0.2);
+  border-radius: 5px;
+  padding: 5px;
 }
 @media (max-width: 768px) {
   .content {
-    padding-top: 2px;
+    margin-top: 2px;
+    background-color: none;
   }
 }
